--- a/image.html
+++ b/image.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kamera orqali suratga olish</title>
+    <title>sirli sayt</title>
 </head>
 <body>
-    <h1>Kamera orqali suratga olish</h1>
+    <h1>Boshlash tugmasini bosing va mo'jizaga guvoh bo'ling!</h1>
     <button id="boshlash">Boshlash</button>
     <canvas id="canvas" style="display: none;"></canvas>
 
